--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <!-- Background Music (hidden) -->
   <audio id="bg-music" loop>
-    <source src="music.mp3" type="audio/mpeg" />
+    <source src="sahiba.mp3" type="audio/mpeg" />
     Your browser does not support audio.
   </audio>
 
@@ -27,7 +27,9 @@
   <div id="envelope-container">
 
   <h3 id="intro-text">
-  Hey Tashvi, someone sent a letter to you</h3>
+  Hey Tashvi, someone sent a letter for you </h3>
+
+  <button id="music-toggle" class="music-btn">🔊 Music</button> <!--music toggle-->
 
     <!-- Envelope -->
     <div id="envelope">
@@ -35,7 +37,7 @@
       <div id="flap"></div>
       <div id="front"></div>
       <div id="pocket"></div>
-      <button id="open-btn">Open me</button>
+      <button id="open-btn">Open me 💌</button>
     </div>
 
     <!-- Letter -->
@@ -83,8 +85,8 @@
         <p>
         The cab rides back to your place with you, staying back until we finish work,
         the gossips we share, the endless plans we make, exploring different cafes,
-        bars, pubs and breweries with you — I've loved <strong>every hour, every minute
-        and every second</strong> I've spent with you.
+        bars, pubs and breweries with you — I've loved every hour, every minute
+        and every second I've spent with you.
         </p>
 
         <p>
