--- a/index.html
+++ b/index.html
@@ -181,12 +181,15 @@
     your fav nashedi<br>
     stew
   </p>
+
+  <button id="restart-btn" class="restart-btn">omg this is so cute, i want to do this again</button>
+</div>
 </div>
 
   <!-- Custom Popup -->
   <div id="custom-popup" class="popup-hidden">
     <div class="popup-content">
-      <div class="popup-emoji">Really?</div>
+      <div class="popup-emoji">This is hurting 💔🥀</div>
       <p id="popup-message"></p>
       <button id="popup-close">Duuhhhhhh 🙂‍↔️</button>
     </div>
